# aoc2024

./: .gitignore  CMakeLists.txt  README.md
day1/: CMakeLists.txt
day1/src/: main.cpp
day2/: CMakeLists.txt
day2/src/: main.cpp
day3/: CMakeLists.txt
day3/src/: main.cpp
day4/: CMakeLists.txt
day4/src/: main.cpp
day5/: CMakeLists.txt
day5/src/: main.cpp
day6/: CMakeLists.txt
day6/src/: main.cpp
day7/: CMakeLists.txt
day7/src/: main.cpp
day8/: CMakeLists.txt
day8/src/: main.cpp
